✨ Add Checkbox & Radio btn

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,4 +4,12 @@
       Datalist chemical element example.
     </a>
   </li>
+  <li>
+    <a routerLink="/checkbox">
+      Simple checkbox and radio button example.
+    </a>
+  </li>
+  <!-- <li>
+    <a routerLink="/xxx"> xxx example. </a>
+  </li> -->
 </ul>
