:sparkles: Add Select

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,29 @@
 <ul>
   <li>
+    <b>Data-table </b>(chemical element) <code>&lt;table mat-table&gt;</code>
     <a routerLink="/data-list-chemical-elements">
-      Datalist chemical element example.
+      here
+      <mat-icon [inline]="true">open_in_new</mat-icon>
     </a>
   </li>
   <li>
+    <b>Checkbox </b>
+    <code>&lt;mat-checkbox&gt;</code>
+    or
+    <code>&lt;mat-radio-group&gt;</code>
+    and
+    <code>&lt;mat-radio-button&gt;</code>
     <a routerLink="/checkbox">
-      Simple checkbox and radio button example.
+      here
+      <mat-icon [inline]="true">open_in_new</mat-icon>
     </a>
   </li>
-  <!-- <li>
-    <a routerLink="/xxx"> xxx example. </a>
-  </li> -->
+  <li>
+    <b>Select</b> <code>&lt;mat-select&gt;</code>
+    <a routerLink="/select">
+      here
+      <mat-icon [inline]="true">open_in_new</mat-icon>
+    </a>
+  </li>
+  
 </ul>
