--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,12 @@ body {
 	font-family: Roboto, "Helvetica Neue", sans-serif;
 	
 }
+
+code {
+  background-color: #e5e5e5;
+  margin: 0 .5rem;
+  padding: 0 .25rem;
+}
+b{
+  font-weight: 500;
+}
